<resources>
    <!--Titles-->
    <string name="app_name">Daniels Drinks</string>
    <string name="title_activity_open_recipe">OpenRecipe</string>

    <!--Actionbuttons-->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_home">Home</string>
    <string name="action_about">About</string>
    <string name="action_sync">Update Database</string>

    <string name="firstOpen">firstTimeOpened</string>

    <!--Toolbars-->
    <string name="addDrinkToolbarText">Add drink</string>
    <string name="settingsToolbarText">Settings</string>
    <string name="openRecipeToolbarText">Recipe</string>

    <!--Buttons-->
    <string name="reset">Reset</string>
    <string name="selectAll">Select all</string>
    <string name="addDrink_addIngredient_cancelBtn">Cancel</string>
    <string name="addDrink_addIngredient_confirmBtn">Add ingredient</string>
    <string name="addDrinkHint_confirmBtn">Add drink</string>
    <string name="addDrinkHint_cancelBtn">Cancel</string>

    <!--Views hints and names-->
    <string name="multiSpinnerHintDefault">No mode</string>
    <string name="multiSpinnerTitle">Ingredients filtering</string>
    <string name="searchViewHint">Search for a drink</string>
    <string name="noInternetConnection">No internet connection</string>

    <!--Add drink hints and names-->
    <string name="addDrinkHint_name">Drink name</string>
    <string name="addDrinkHint_recipe">Enter instructions...</string>
    <string name="addDrinkHint_glass">Select glass type</string>
    <string name="addDrinkHint_ingredient">Add ingredient</string>
    <string name="addDrink_addIngredientPopup_title">Add ingredient</string>
    <string name="addDrink_addIngredientHint_size">Size</string>
    <string name="addDrink_addIngredientHint_unit">Unit</string>
    <string name="addDrink_addIngredientHint_spinnerText">Select ingredient</string>
    <string name="addDrink_mainActivity_drinkAdded">Drink successfully added</string>
    <string name="addDrink_mainActivity_drinkAddCancelled">Add drink cancelled</string>
    <string name="addDrink_cancelled">Cancelled</string>

    <!--About dialog-->
    <string name="about_title">Daniels Drinks</string>
    <string name="about_message">Thank you for using Daniels Drinks!</string>
    <string name="about_developers">Developed by Daniel Odenbrand and Joel Yourstone</string>
    <string name="about_version">Current version: </string>

    <!--Toasts-->
    <string name="addDrink_error_incompleteForm">You have not filled out all fields</string>
    <string name="addDrink_removedIngredientFromList">Ingredient removed from drink</string>
    <string name="addDrink_addIngredient_success_ingAdded">Ingredient added to drink</string>
    <string name="addDrink_addIngredient_error_size">Size is not a double</string>
    <string name="addDrink_addIngredient_error_duplicatedIngredient">Duplicate ingredient</string>
    <string name="database_sqliteException">Error when trying to add drink to database</string>

    <!--Filtering setting-->
    <string name="filterModePrefTitle">Filtering mode</string>
    <string name="filterModePrefKey">filteringModePref</string>
    <string name="filterAndMode">And mode</string>
    <string name="filterIngredientMode">Ingredient mode</string>
    <string name="filterOrMode">Or mode</string>

    <!--Activities intent-->
    <string name="mainToOpenRecipeActivityIntent">ListViewClick</string>
    <string name="mainToAddDrinkActivity_ingredients">AddButtonClick_SendIngredients</string>
    <string name="mainToAddDrinkActivity_glasses">AddButtonClick_SendGlass</string>
    <string name="addDrinkToMain">AddDrinkToMain</string>

    <!--Recipe string constants-->
    <string name="recipeGlassConstant">Glass: </string>
</resources>
