<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">
        <!--Make into spinner with hint instead-->
        <TextView
            android:id="@+id/addDrink_addIngredient_spinnerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/addDrink_addIngredientHint_spinnerText"/>
        <Spinner
            android:id="@+id/addDrink_addIngredient_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addDrink_addIngredient_spinnerText">
        </Spinner>
    </RelativeLayout>

    <EditText
        android:id="@+id/addDrink_addIngredient_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/addDrink_addIngredientHint_size"
        android:layout_gravity="center"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/addDrink_addIngredient_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/addDrink_addIngredientHint_unit"
        android:layout_gravity="center"/>

</LinearLayout>