<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@android:color/transparent">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/addDrink_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <EditText
                android:id="@+id/addDrink_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/addDrinkHint_name"
                android:inputType="text"/>

            <RelativeLayout
                android:id="@+id/addDrink_glass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addDrink_name"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">
                <!--Make into spinner with hint instead-->
                <TextView
                    android:id="@+id/addDrink_glass_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/addDrinkHint_glass"/>
                <Spinner
                    android:id="@+id/addDrink_glass_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addDrink_glass_text">
                </Spinner>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/addDrink_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addDrink_glass"
                android:paddingBottom="20dp">

                <ListView
                    android:id="@+id/addDrink_addIngredientList"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="0.5"
                    android:paddingRight="20dp"/>

                <Button
                    android:id="@+id/addDrink_addIngredientBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addDrinkHint_ingredient" />

            </LinearLayout>


            <EditText
                android:id="@+id/addDrink_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addDrink_ingredient"
                android:textAlignment="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/addDrinkHint_recipe"
                android:inputType="text"/>

            <RelativeLayout
                android:id="@+id/addDrink_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addDrink_instructions"
                android:paddingTop="20dp">
                <Button
                    android:id="@+id/addDrink_cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/addDrinkHint_cancelBtn"/>

                <Button
                    android:id="@+id/addDrink_confirmBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/addDrinkHint_confirmBtn"/>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>